--- a/all_finished_last.html
+++ b/all_finished_last.html
@@ -617,5 +617,12 @@
   <script async defer src="https://apis.google.com/js/api.js" onload="this.onload=function(){};handleClientLoad()"
       onreadystatechange="if (this.readyState === 'complete') this.onload()"></script>
 
+  <script>
+window.onLoadCallback = function(){
+  gapi.auth2.init({
+      client_id: CLIENT_ID+'.apps.googleusercontent.com'
+    });
+}
+</script>
 </body>
 </html>
