--- a/all_finished_last.html
+++ b/all_finished_last.html
@@ -614,7 +614,7 @@
 
   </script>
 
-  <script async defer src="https://apis.google.com/js/api.js" onload="this.onload=function(){};handleClientLoad()"
+  <script async defer src="https://apis.google.com/js/api.js?onload=onLoadCallback" onload="this.onload=function(){};handleClientLoad()"
       onreadystatechange="if (this.readyState === 'complete') this.onload()"></script>
 
   <script>
