--- a/all_finished_last.html
+++ b/all_finished_last.html
@@ -600,7 +600,7 @@
               // Handle the initial sign-in state.
               updateSigninStatus(gapi.auth2.getAuthInstance().isSignedIn.get());
           }, function (error) {
-              appendPre(JSON.stringify(error, null, 2));
+              console.log(error);
           });
       }
 
