--- a/all_finished_last.html
+++ b/all_finished_last.html
@@ -106,6 +106,10 @@
   <div id="id_input" class="box">
     <h1>CMにおける製品の印象評価実験</h1>
     <form><font size="+1">
+      <label for="first_id">ID Aを入力してください：</label><br>
+      <input type="text" id="first_id" name="first_id" value=""><br>
+      <label for="second_id">ID Bを入力してください：</label><br>
+      <input type="text" id="second_id" name="second_id" value=""><br>
       <label for="ss_id">IDを入力してください：</label><br>
       <input type="text" id="ss_id" name="ss_id" value=""><br>
     </font>
@@ -315,9 +319,12 @@
       var id_input = document.getElementById("id_input");
       var eval=document.getElementById("eval");
       var test = document.getElementById("test");
+      var first_id = document.getElementById("first_id");
+      var second_id = document.getElementById("second_id");
+      var ss_id = document.getElementById("ss_id");
 
     function check_id(){
-      if (spreadsheetId == ""){
+      if (ss_id == "" || second_id == "" || first_id ==""){
         alert("IDを入力してください");
       } else {
         check_in();
@@ -563,9 +570,9 @@
 
     
       // 3 VALUE INI MUSTI DIUBAH SESUAI INSTRUKSI
-      var CLIENT_ID = '514380287820-tbhleigkv9mandjaqgrm3i5065e6g4ks.apps.googleusercontent.com';
-      var API_KEY = 'AIzaSyCGXub25ENitujtdMtSscO2sqap0g0neiU';
-      var spreadsheetId = document.getElementById("ss_id")
+      var CLIENT_ID = document.getElementbyId("first_id").value;
+      var API_KEY = document.getElementbyId("second_id").value;
+      var spreadsheetId = document.getElementById("ss_id").value;
 
       // INI BUAT SHOW/HIDE TOMBOL2, KALO display=none ITU DI HIDE, KALO display=inline-block ITU DI SHOW
       // DI APP HARUSNYA NGGA PERLU GINIAN
