--- a/all_finished_last.html
+++ b/all_finished_last.html
@@ -110,7 +110,7 @@
       <input type="text" id="first_id" name="first_id" value=""><br>
       <label for="second_id">ID Bを入力してください：</label><br>
       <input type="text" id="second_id" name="second_id" value=""><br>
-      <label for="ss_id">IDを入力してください：</label><br>
+      <label for="ss_id">ID Cを入力してください：</label><br>
       <input type="text" id="ss_id" name="ss_id" value=""><br>
     </font>
     </form>
