--- a/all_finished_last.html
+++ b/all_finished_last.html
@@ -570,9 +570,9 @@
 
     
       // 3 VALUE INI MUSTI DIUBAH SESUAI INSTRUKSI
-      var CLIENT_ID = document.getElementbyId("first_id").value;
-      var API_KEY = document.getElementbyId("second_id").value;
-      var spreadsheetId = document.getElementById("ss_id").value;
+      var CLIENT_ID = first_id.value;
+      var API_KEY = second_id.value;
+      var spreadsheetId = ss_id.value;
 
       // INI BUAT SHOW/HIDE TOMBOL2, KALO display=none ITU DI HIDE, KALO display=inline-block ITU DI SHOW
       // DI APP HARUSNYA NGGA PERLU GINIAN
