--- a/all_finished_last.html
+++ b/all_finished_last.html
@@ -106,10 +106,6 @@
   <div id="id_input" class="box">
     <h1>CMにおける製品の印象評価実験</h1>
     <form><font size="+1">
-      <label for="first_id">ID Aを入力してください：</label><br>
-      <input type="text" id="first_id" name="first_id" value=""><br>
-      <label for="second_id">ID Bを入力してください：</label><br>
-      <input type="text" id="second_id" name="second_id" value=""><br>
       <label for="ss_id">ID Cを入力してください：</label><br>
       <input type="text" id="ss_id" name="ss_id" value=""><br>
     </font>
@@ -319,12 +315,10 @@
       var id_input = document.getElementById("id_input");
       var eval=document.getElementById("eval");
       var test = document.getElementById("test");
-      var first_id = document.getElementById("first_id");
-      var second_id = document.getElementById("second_id");
       var ss_id = document.getElementById("ss_id");
 
     function check_id(){
-      if (ss_id == "" || second_id == "" || first_id ==""){
+      if (ss_id.value == ""){
         alert("IDを入力してください");
       } else {
         check_in();
@@ -570,8 +564,8 @@
 
     
       // 3 VALUE INI MUSTI DIUBAH SESUAI INSTRUKSI
-      var CLIENT_ID = first_id.value;
-      var API_KEY = second_id.value;
+      var CLIENT_ID = '514380287820-tbhleigkv9mandjaqgrm3i5065e6g4ks.apps.googleusercontent.com';
+      var API_KEY = 'AIzaSyCGXub25ENitujtdMtSscO2sqap0g0neiU';
       var spreadsheetId = ss_id.value;
 
       // INI BUAT SHOW/HIDE TOMBOL2, KALO display=none ITU DI HIDE, KALO display=inline-block ITU DI SHOW
