--- a/all_finished_last.html
+++ b/all_finished_last.html
@@ -106,7 +106,7 @@
   <div id="id_input" class="box">
     <h1>CMにおける製品の印象評価実験</h1>
     <form><font size="+1">
-      <label for="ss_id">ID Cを入力してください：</label><br>
+      <label for="ss_id">ID を入力してください：</label><br>
       <input type="text" id="ss_id" name="ss_id" value=""><br>
     </font>
     </form>
