--- a/all_finished_last.html
+++ b/all_finished_last.html
@@ -145,7 +145,7 @@
 
 
   <div id="all">
-    <video id="vid" autoplay src="" style="display:none" width="1400" height="800"></video>
+    <video id="vid" autoplay src="" style="display:none" width="1400" height="800" controlsList="nodownload"></video>
     <form id="eval" style="display:none">
       <div class="absolute">
       <p style="color:#CB472A;" align=center class="small"><b><font size="+1"> CMに対する評価ではなく、CMによる製品の印象を評価すること </font></b></p>
