--- a/all_finished_last.html
+++ b/all_finished_last.html
@@ -251,7 +251,7 @@
             <output  id="ux24_disp" style="color:#CB472A;"></output><br>
             <input type="range" id="ux24" name="ux24" min="1" max="5" value="1" class="slider" oninput="ux24_disp.value = ux24.value">
           <br><br>
-            <label for="extra1" style="color:#FFFFAA;">何の製品のCMかの分かりやすい:</label>
+            <label for="extra1" style="color:#FFFFAA;">何の製品についてかが分かりやすい:</label>
             <output  id="extra1_disp" style="color:#CB472A;"></output><br>
             <input type="range" id="extra1" name="extra1" min="1" max="5" value="1" class="slider" oninput="extra1_disp.value = extra1.value">
           <br><br>
