--- a/all_finished_last.html
+++ b/all_finished_last.html
@@ -339,7 +339,7 @@
             // DATA ARRAY NYA ADA DI result.values MISAL MAU DIBACA
             var finished = result.values[2]
             if (finished == 80) {
-              close_file();
+              alert("全ての動画を評価してくれました。ありがとうございました！");
             } else if (finished!=0) {
                 vol.innerHTML = result.values[4];
                 finished_num.innerHTML = finished;
