--- a/all_finished_last.html
+++ b/all_finished_last.html
@@ -338,7 +338,7 @@
             console.log(`${numRows} rows retrieved.`);
             // DATA ARRAY NYA ADA DI result.values MISAL MAU DIBACA
             var finished = result.values[2]
-            if (finished == 80) {
+            if (finished == numRows-1) {
               alert("全ての動画を評価してくれました。ありがとうございました！");
             } else if (finished!=0) {
                 vol.innerHTML = result.values[4];
@@ -460,7 +460,7 @@
           i++;
           save_file();
           if (i==80) {
-              alert("全ての動画を評価してくれました。ありがとうございました！");
+              alert("全ての動画を評価していただき、ありがとうございました！");
               close_file();
           }
           else {
