--- a/home_finished.html
+++ b/home_finished.html
@@ -195,7 +195,7 @@
     本実験はCMの特徴と製品に対する印象の関係を調べる研究のために行います。<br>
     実験参加者にCMにおける製品の印象を評価してもらいます。<br>
     CMは長さが30秒程度であり、80本あります。評価項目は26個あります。<br>
-    1本のCMを見て、全ての項目を評価するためには5分が必要と想定しますので、<br>
+    1本のCMを見て、全ての項目を評価するためには5分程度かかりますので、<br>
     合計6-7時間が必要となります。<br>
     ただし、好きな時に休憩を取ることができます。
   </p>
@@ -296,7 +296,7 @@
   "回答が終わったら、次のCMを見るには「次へ」のボタンを押してください。<br />"+
   "CMは80本ありますが、好きな時間に休憩を取ってください。<br />休憩する場合は「保存」のボタンを押してください。",
   "「次へ」のボタンを押すと、５秒間の黒い画面が表示されます。<br />その後、次のCMを全画面で見て、評価してもらいます。",
-   "「保存」のボタンを押すと、ファイルが保存されて、評価が終わったCM数が表示される。"]
+   "「保存」のボタンを押すと、ファイルが保存されて、評価が終わったCM数が表示されます。"]
 
   var i = 0
 
