--- a/all_finished_last.html
+++ b/all_finished_last.html
@@ -148,7 +148,7 @@
     <video id="vid" autoplay src="" style="display:none" width="1400" height="800" controlsList="nodownload"></video>
     <form id="eval" style="display:none">
       <div class="absolute">
-      <p style="color:#CB472A;" align=center class="small"><b><font size="+1"> CMに対する評価ではなく、CMによる製品の印象を評価すること </font></b></p>
+      <p style="color:#CB472A;" align=center class="small"><b><font size="+1"> CMに対する評価ではなく、CMによる製品の印象を評価してください </font></b></p>
       <table style="width:700px">
         <tr>
           <td style="text-align:left">
@@ -264,7 +264,7 @@
         </div>
         <p>
       <br>
-      ５段階評価で評価すること <br>
+      ５段階評価で評価してください <br>
       1: 全く想像できない<br>
       2: あまり想像できない<br>
       3: どちらも言えない<br>
