--- a/home_finished.html
+++ b/home_finished.html
@@ -245,7 +245,7 @@
       <button id="nameb" class="btn name">名前入力<br>音量調整</button>
       <button id="fsb" class="btn fs">CMの全画面</button>
       <button id="evalb" class="btn eval">CMの評価</button>
-      <button id="blankb" class="btn blank">5秒ブランク</button>
+      <button id="blankb" class="btn blank">5秒の空白</button>
       <button id="saveb" class="btn save">保存</button>
       </div>
     </td>
