--- a/all_finished_last.html
+++ b/all_finished_last.html
@@ -270,7 +270,7 @@
       3: どちらも言えない<br>
       4: なんとか想像できる<br>
       5: はっきり想像できる<br>
-      評価が１でも、必ず1回ボタンをクリックして、数値が右側に表示されるように動かすこと
+      評価が１でも、必ず1回ボタンをクリックして、数値が右側に表示されるように動かしてください
       </p>
     </form>
 
