--- a/all.html
+++ b/all.html
@@ -164,7 +164,7 @@
       <tr>
         <td>
           <p style="color:#CB472A;"><b><font size="+1"> CMがもたらす製品による体験を想像してください！ </font></b></p>
-            <video id="vid" autoplay src="" style="display:none" width="1400" height="800" controlsList="nodownload" loop></video>
+            <video id="vid" autoplay src="" width="1400" height="800" controlsList="nodownload" loop></video>
             <p>
             7段階評価（０〜６）で評価してください <br>
             0: 想像できない<br>
