--- a/all.html
+++ b/all.html
@@ -160,11 +160,11 @@
   </center>
 
 
-    <table style="width:700px" id="table" >
+    <table style="width:1300px">
       <tr>
         <td>
           <p style="color:#CB472A;"><b><font size="+1"> CMがもたらす製品による体験を想像してください！ </font></b></p>
-            <video id="vid" autoplay src="" width="1400" height="800" controlsList="nodownload" loop style="display:none"></video>
+            <video id="vid" autoplay src="" width="1400" height="800" controlsList="nodownload" loop></video>
             <p>
             7段階評価（０〜６）で評価してください <br>
             0: 想像できない<br>
