--- a/all_github.html
+++ b/all_github.html
@@ -364,6 +364,7 @@
                 finished_num.innerHTML = finished;
                 volume_check.style.display='block';
                 i+=parseInt(finished_num.innerHTML);
+                width=i*5/4;
               } else {
                 volume_input.style.display ='block';
                 test.src = result.values[0];
