--- a/all_github.html
+++ b/all_github.html
@@ -280,6 +280,7 @@
         </div>
         <p>
       <br>
+      CMがもたらす製品による体験を想像してください<br>
       ７段階評価（０〜６）で評価してください <br>
       0: 想像できない<br>
       2: やや想像できる<br>
