--- a/all_github.html
+++ b/all_github.html
@@ -478,6 +478,7 @@
           vid.height = '400';
           vid.controls = true;
           vid.style.cursor="pointer";
+          vid.play();
           next.style.display = "block";
           save.style.display = "block";
           }},5000)
@@ -555,6 +556,7 @@
           vid.height='400';
           vid.controls = true;
           vid.style.cursor="pointer";
+          vid.play();
           var finished_num = i;
           var left_num = 80 - finished_num;
           var next=document.getElementById("next");
