--- a/all_github.html
+++ b/all_github.html
@@ -547,6 +547,7 @@
           vid.height='800';
           vid.controls = false;
           vid.style.cursor="none";
+          vid.play()
         },5000)
         vid.onended = function() {
           progplus();
