--- a/home_finished.html
+++ b/home_finished.html
@@ -291,10 +291,11 @@
   images = ["image/name.png","image/volume.png","image/fullscreen.png", "image/evaluation.png", "image/blank.png", "image/saved.png"]
   exp = ["まずはIDを入力してもらいます。","初めての方は音量を調整し、入力してください。初めてではない方は音量を確認してください","CMを全画面で見ます。<br />この時、動画の一時休止、早送りの操作はできません。<br />"+
   "CMが終わったら、自動的に評価シートが表示されます。","CMは左上に何回も再生することができます。<br />"+
-  "評価項目は26個あり、全てを評価することが必要です。<br />"+
+  "CMがもたらす体験を7段階評価で評価してください。評価項目は26個あり、全てを評価することが必要です。<br />"+
   "<h3>スライダーは必ず一回動かしてください。</h3 />" +
   "回答が終わったら、次のCMを見るには「次へ」のボタンを押してください。<br />"+
-  "CMは80本ありますが、好きな時間に休憩を取ってください。<br />休憩する場合は「保存」のボタンを押してください。",
+  "CMは80本ありますが、好きな時間に休憩を取ってください。<br />休憩する場合は「保存」のボタンを押してください。<br />"+
+  "ただし、できるだけ近い時間で終わらせてください。",
   "「次へ」のボタンを押すと、５秒間の黒い画面が表示されます。<br />その後、次のCMを全画面で見て、評価してもらいます。",
    "「保存」のボタンを押すと、ファイルが保存されて、評価が終わったCM数が表示されます。"]
 
