--- a/home_finished.html
+++ b/home_finished.html
@@ -288,7 +288,7 @@
     }
   }
 
-  images = ["image/name.png","image/volume.png","image/fullscreen.png", "image/evaluation.png", "image/blank.png", "image/saved.png"]
+  images = ["image/name.png","image/volume.png","image/fullscreen.png", "image/eval.png", "image/blank.png", "image/saved.png"]
   exp = ["まずはIDを入力してもらいます。","初めての方は音量を調整し、入力してください。初めてではない方は音量を確認してください","CMを全画面で見ます。<br />この時、動画の一時休止、早送りの操作はできません。<br />"+
   "CMが終わったら、自動的に評価シートが表示されます。","CMは左上に何回も再生することができます。<br />"+
   "CMがもたらす体験を7段階評価で評価してください。評価項目は26個あり、全てを評価することが必要です。<br />"+
