--- a/all_finished_last.html
+++ b/all_finished_last.html
@@ -38,7 +38,7 @@
     .slider {
       -webkit-appearance: none;
       height: 10px;
-      width: 150px;
+      width: 125px;
       border-radius: 5px;
       background: #FFFFFF;
       outline: none;
@@ -169,111 +169,117 @@
         <tr>
           <td style="text-align:left">
             <label for="ux1">微笑ましく思う:</label>
-            <output  id="ux1_disp" style="color:#CB472A;">未回答</output><br>
+            <br>
             <input type="range" id="ux1" name="ux1" min="0" max="6" value="0" class="slider" oninput="ux1_disp.value = ux1.value">
+            <output  id="ux1_disp" style="color:#CB472A;">未回答</output>
             <br><br>
             <label for="ux2">心の繋がりを感じる:</label>
-            <output  id="ux2_disp" style="color:#CB472A;">未回答</output><br>
+            <br>
             <input type="range" id="ux2" name="ux2" min="0" max="6" value="0" class="slider" oninput="ux2_disp.value = ux2.value">
+            <output  id="ux2_disp" style="color:#CB472A;">未回答</output>
             <br><br>
             <label for="ux3">新しい自分に気づく:</label>
-            <output  id="ux3_disp" style="color:#CB472A;">未回答</output><br>
+            <br>
             <input type="range" id="ux3" name="ux3" min="0" max="6" value="0" class="slider" oninput="ux3_disp.value = ux3.value">
+            <output  id="ux3_disp" style="color:#CB472A;">未回答</output>
             <br><br>
             <label for="ux4">分からなかったことが分かる:</label>
-            <output  id="ux4_disp" style="color:#CB472A;">未回答</output><br>
+            <br>
             <input type="range" id="ux4" name="ux4" min="0" max="6" value="0" class="slider" oninput="ux4_disp.value = ux4.value">
+            <output  id="ux4_disp" style="color:#CB472A;">未回答</output>
             <br><br>
             <label for="ux5">過去のいい体験を想起できる:</label>
-            <output  id="ux5_disp" style="color:#CB472A;">未回答</output><br>
+            <br>
             <input type="range" id="ux5" name="ux5" min="0" max="6" value="0" class="slider" oninput="ux5_disp.value = ux5.value">
-            <br><br>
+            <output  id="ux5_disp" style="color:#CB472A;">未回答</output><br><br>
             <label for="ux6">タイミングよくできる:</label>
-            <output  id="ux6_disp" style="color:#CB472A;">未回答</output><br>
+            <br>
             <input type="range" id="ux6" name="ux6" min="0" max="6" value="0" class="slider" oninput="ux6_disp.value = ux6.value">
-            <br><br>
+            <output  id="ux6_disp" style="color:#CB472A;">未回答</output><br><br>
             <label for="ux7">誰かに褒められる:</label>
-            <output  id="ux7_disp" style="color:#CB472A;">未回答</output><br>
+            <br>
             <input type="range" id="ux7" name="ux7" min="0" max="6" value="0" class="slider" oninput="ux7_disp.value = ux7.value">
-            <br><br>
+            <output  id="ux7_disp" style="color:#CB472A;">未回答</output><br><br>
             <label for="ux8">信頼して任せられる:</label>
-            <output  id="ux8_disp" style="color:#CB472A;">未回答</output><br>
+            <br>
             <input type="range" id="ux8" name="ux8" min="0" max="6" value="0" class="slider" oninput="ux8_disp.value = ux8.value">
-            <br><br>
+            <output  id="ux8_disp" style="color:#CB472A;">未回答</output><br><br>
             <label for="ux9">簡単にできる・早くできる:</label>
-            <output  id="ux9_disp" style="color:#CB472A;">未回答</output><br>
+            <br>
             <input type="range" id="ux9" name="ux9" min="0" max="6" value="0" class="slider" oninput="ux9_disp.value = ux9.value">
-            <br><br>
+            <output  id="ux9_disp" style="color:#CB472A;">未回答</output><br><br>
             <label for="ux10">整っていると感じる:</label>
-            <output  id="ux10_disp" style="color:#CB472A;">未回答</output><br>
+            <br>
             <input type="range" id="ux10" name="ux10" min="0" max="6" value="0" class="slider" oninput="ux10_disp.value = ux10.value">
-            <br><br>
+            <output  id="ux10_disp" style="color:#CB472A;">未回答</output><br><br>
             <label for="ux11">向上心を駆り立てられる:</label>
-            <output  id="ux11_disp" style="color:#CB472A;">未回答</output><br>
+            <br>
             <input type="range" id="ux11" name="ux11" min="0" max="6" value="0" class="slider" oninput="ux11_disp.value = ux11.value">
-            <br><br>
+            <output  id="ux11_disp" style="color:#CB472A;">未回答</output><br><br>
             <label for="ux12">未来のいい体験を想起できる:</label>
-            <output  id="ux12_disp" style="color:#CB472A;">未回答</output><br>
+            <br>
             <input type="range" id="ux12" name="ux12" min="0" max="6" value="0" class="slider" oninput="ux12_disp.value = ux12.value">
-            <br><br>
+            <output  id="ux12_disp" style="color:#CB472A;">未回答</output><br><br>
             <label for="ux13">誰かを喜ばせることができる:</label>
-            <output  id="ux13_disp" style="color:#CB472A;">未回答</output><br>
+            <br>
             <input type="range" id="ux13" name="ux13" min="0" max="6" value="0" class="slider" oninput="ux13_disp.value = ux13.value">
-          <br>
+            <output  id="ux13_disp" style="color:#CB472A;">未回答</output>
+            <br>
         </td>
 
           <td style="text-align:left">
             <label for="ux14">上手にできる:</label>
-            <output  id="ux14_disp" style="color:#CB472A;">未回答</output><br>
+            <br>
             <input type="range" id="ux14" name="ux14" min="0" max="6" value="0" class="slider" oninput="ux14_disp.value = ux14.value">
-          <br><br>
+            <output  id="ux14_disp" style="color:#CB472A;">未回答</output><br><br>
             <label for="ux15">視覚的美しさを感じる:</label>
-            <output  id="ux15_disp" style="color:#CB472A;">未回答</output><br>
+            <br>
             <input type="range" id="ux15" name="ux15" min="0" max="6" value="0" class="slider" oninput="ux15_disp.value = ux15.value">
-          <br><br>
+            <output  id="ux15_disp" style="color:#CB472A;">未回答</output><br><br>
             <label for="ux16">聴覚的美しさを感じる:</label>
-            <output  id="ux16_disp" style="color:#CB472A;">未回答</output><br>
+            <br>
             <input type="range" id="ux16" name="ux16" min="0" max="6" value="0" class="slider" oninput="ux16_disp.value = ux16.value">
-          <br><br>
+            <output  id="ux16_disp" style="color:#CB472A;">未回答</output><br><br>
             <label for="ux17">達成感を感じる:</label>
-            <output  id="ux17_disp" style="color:#CB472A;">未回答</output><br>
+            <br>
             <input type="range" id="ux17" name="ux17" min="0" max="6" value="0" class="slider" oninput="ux17_disp.value = ux17.value">
-          <br><br>
+            <output  id="ux17_disp" style="color:#CB472A;">未回答</output><br><br>
             <label for="ux18">うまくなったと感じる:</label>
-            <output  id="ux18_disp" style="color:#CB472A;">未回答</output><br>
+            <br>
             <input type="range" id="ux18" name="ux18" min="0" max="6" value="0" class="slider" oninput="ux18_disp.value = ux18.value">
-          <br><br>
+            <output  id="ux18_disp" style="color:#CB472A;">未回答</output><br><br>
             <label for="ux19">充実を感じる:</label>
-            <output  id="ux19_disp" style="color:#CB472A;">未回答</output><br>
+            <br>
             <input type="range" id="ux19" name="ux19" min="0" max="6" value="0" class="slider" oninput="ux19_disp.value = ux19.value">
-          <br><br>
+            <output  id="ux19_disp" style="color:#CB472A;">未回答</output><br><br>
             <label for="ux20">集中できる:</label>
-            <output  id="ux20_disp" style="color:#CB472A;">未回答</output><br>
+            <br>
             <input type="range" id="ux20" name="ux20" min="0" max="6" value="0" class="slider" oninput="ux20_disp.value = ux20.value">
-          <br><br>
+            <output  id="ux20_disp" style="color:#CB472A;">未回答</output><br><br>
             <label for="ux21">癒し・リラックスを感じる:</label>
-            <output  id="ux21_disp" style="color:#CB472A;">未回答</output><br>
+            <br>
             <input type="range" id="ux21" name="ux21" min="0" max="6" value="0" class="slider" oninput="ux21_disp.value = ux21.value">
-          <br><br>
+            <output  id="ux21_disp" style="color:#CB472A;">未回答</output><br><br>
             <label for="ux22">爽やかだと感じる:</label>
-            <output  id="ux22_disp" style="color:#CB472A;">未回答</output><br>
+            <br>
             <input type="range" id="ux22" name="ux22" min="0" max="6" value="0" class="slider" oninput="ux22_disp.value = ux22.value">
-          <br><br>
+            <output  id="ux22_disp" style="color:#CB472A;">未回答</output><br><br>
             <label for="ux23">量や程度がちょうど良い:</label>
-            <output  id="ux23_disp" style="color:#CB472A;">未回答</output><br>
+            <br>
             <input type="range" id="ux23" name="ux23" min="0" max="6" value="0" class="slider" oninput="ux23_disp.value = ux23.value">
-          <br><br>
+            <output  id="ux23_disp" style="color:#CB472A;">未回答</output><br><br>
             <label for="ux24">非日常的な贅沢を感じる:</label>
-            <output  id="ux24_disp" style="color:#CB472A;">未回答</output><br>
+            <br>
             <input type="range" id="ux24" name="ux24" min="0" max="6" value="0" class="slider" oninput="ux24_disp.value = ux24.value">
-          <br><br>
-            <label for="extra1" style="color:#FFFFAA;">何の製品についてかが分かりやすい:</label>
-            <output  id="extra1_disp" style="color:#CB472A;">未回答</output><br>
+            <output  id="ux24_disp" style="color:#CB472A;">未回答</output><br><br>
+            <label for="extra1" style="color:#FFFFAA;">何の製品のCMかの分かりやすい:</label>
+            <br>
             <input type="range" id="extra1" name="extra1" min="0" max="6" value="0" class="slider" oninput="extra1_disp.value = extra1.value">
-          <br><br>
+            <output  id="extra1_disp" style="color:#CB472A;">未回答</output><br><br>
             <label for="extra2" style="color:#FFFFAA;">製品が魅力的だと感じる:</label>
-            <output  id="extra2_disp" style="color:#CB472A;">未回答</output><br>
+            <br>
             <input type="range" id="extra2" name="extra2" min="0" max="6" value="0" class="slider" oninput="extra2_disp.value = extra2.value">
+            <output  id="extra2_disp" style="color:#CB472A;">未回答</output>
           </td>
         </tr>
           </table>
