--- a/home_finished.html
+++ b/home_finished.html
@@ -242,7 +242,7 @@
     <td style="text-align:right">
       <div id="flow" class="container" style="display:none">
       <img src="image/button-bg.png" alt="flow button background" width="400">
-      <button id="nameb" class="btn name">名前入力<br>音量調整</button>
+      <button id="nameb" class="btn name">ID入力<br>音量調整</button>
       <button id="fsb" class="btn fs">CMの全画面</button>
       <button id="evalb" class="btn eval">CMの評価</button>
       <button id="blankb" class="btn blank">5秒の空白</button>
