--- a/all_finished_last.html
+++ b/all_finished_last.html
@@ -164,7 +164,7 @@
     <video id="vid" autoplay src="" style="display:none" width="1400" height="800" controlsList="nodownload"></video>
     <form id="eval" style="display:none">
       <div class="absolute">
-      <p style="color:#CB472A;" align=center class="small"><b><font size="+1"> CMがもたらす体験を想像してください </font></b></p>
+      <p style="color:#CB472A;" align=center class="small"><b><font size="+1">この生活家電のCMから、この家電に対して、どのような体験をイメージしますか？</font></b></p>
       <table style="width:600px">
         <tr>
           <td style="text-align:left">
@@ -286,7 +286,7 @@
         </div>
         <p>
       <br>
-      CMがもたらす体験を想像してください<br>
+      この生活家電のCMから、この家電に対して、どのような体験をイメージしますか？<br>
       ７段階評価（０〜６）で評価してください <br>
       0: 想像できない<br>
       2: やや想像できる<br>
