--- a/all_finished_last.html
+++ b/all_finished_last.html
@@ -477,6 +477,7 @@
         vid.style.display='block';
         vid.src = embed;
         vid.onended = function() {
+          alert("この生活家電のCMから、この家電に対して、どのような体験をイメージしますか？");
           progplus();
           bottom.style.display="block";
           eval.style.display='block';
