--- a/all_finished_last.html
+++ b/all_finished_last.html
@@ -164,7 +164,7 @@
     <video id="vid" autoplay src="" style="display:none" width="1400" height="800" controlsList="nodownload"></video>
     <form id="eval" style="display:none">
       <div class="absolute">
-      <p style="color:#CB472A;" align=center class="small"><b><font size="+1">この生活家電のCMから、この家電に対して、どのような体験をイメージしますか？</font></b></p>
+      <p style="color:#FFCCCC;" align=center class="small"><b><font size="+1">この生活家電のCMから、この家電に対して、どのような体験をイメージしますか？</font></b></p>
       <table style="width:600px">
         <tr>
           <td style="text-align:left">
@@ -477,7 +477,6 @@
         vid.style.display='block';
         vid.src = embed;
         vid.onended = function() {
-          alert("この生活家電のCMから、この家電に対して、どのような体験をイメージしますか？");
           progplus();
           bottom.style.display="block";
           eval.style.display='block';
