--- a/home_finished.html
+++ b/home_finished.html
@@ -197,7 +197,9 @@
     CMは長さが30秒程度であり、80本あります。評価項目は26個あります。<br>
     1本のCMを見て、全ての項目を評価するためには5分程度かかりますので、<br>
     合計6-7時間が必要となります。<br>
-    ただし、好きな時に休憩を取ることができます。
+    ただし、好きな時に休憩を取ることができます。<br>
+    何日間に分けても構いませんが、感覚が大きくずれないように、
+    できるだけ実験を始める日から<b>２週間以内</b>に終わらせてください。<br>
   </p>
   <p>
     CM動画は本実験のためにしか利用しません</br>
