--- a/all_finished_last.html
+++ b/all_finished_last.html
@@ -364,7 +364,7 @@
             console.log(`${numRows} rows retrieved.`);
             // DATA ARRAY NYA ADA DI result.values MISAL MAU DIBACA
             var finished = result.values[2]
-            if (finished == numRows-1) {
+            if (finished == 80) {
               alert("全ての動画の評価が終わりました。ありがとうございました！");
             } else if (finished!=0) {
                 vol.innerHTML = result.values[4];
