--- a/all_finished_last.html
+++ b/all_finished_last.html
@@ -617,7 +617,7 @@
         alert("お疲れ様です。ファイルを保存しました")
         var thank = document.getElementById("thank");
         if(left_num!=0){
-          thank.innerHTML="今回は"+finished_num+"本のCMを評価していただき、ありがとうございます。<br /> 残りの"+left_num+"の評価をお待ちしております";
+          thank.innerHTML="これまでは"+finished_num+"本のCMを評価していただき、ありがとうございます。<br /> 残りの"+left_num+"の評価をお待ちしております";
         } else {
           thank.innerHTML="全てのCMを評価していただき、ありがとうございました";
         }
